# quant-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  run.sh
.github/workflows/: test.yml
config/: settings.yaml
config/prompts/: earnings_analyst.md  evening_analyst.md  macro_analyst.md  meta_reflector.md  midday_reviewer.md  news_analyst.md  portfolio_manager.md  position_reviewer.md  risk_manager.md  tech_analyst.md
scripts/: backfill_earnings.py  compare_evening_outputs.py  export_alpaca_trades.py  install_plists.sh  refresh_pricing.py  relay_stream_smoke.py  replay_decision.py  replay_evening.py  run_daily_export.sh  run_if_et_window.sh  watchlist_candidates.py  weekly_review.py
scripts/systemd/: quant-agent-daily.service  quant-agent-daily.timer
src/: config.py  cost_table.py  decision_checkpoint.py  models.py  notifier.py  pipeline.py  pipeline_context.py  pipeline_stages.py  portfolio_constructor.py  replay.py  scheduler.py  trading_calendar.py
src/agents/: base.py  earnings_analyst.py  evening_analyst.py  macro_analyst.py  meta_reflector.py  midday_reviewer.py  news_analyst.py  portfolio_manager.py  position_reviewer.py  risk_manager.py  (+1 more)
tests/: conftest.py  test_agent_prompts_snapshot.py  test_agents_audit_round2.py  test_audit_fixes_2026_07_16.py  test_audit_round2.py  test_base_agent.py  test_broker.py  test_bugfixes.py  test_cash_sweep.py  test_config.py  test_correlation_risk.py  test_cost_table.py  test_daily_report.py  test_db.py  test_decision_checkpoint.py  test_deployment_gap.py  test_earnings_analyst.py  test_earnings_deep_dive.py  test_earnings_preprocess.py  test_et_window_script.py  test_evening_analyst_v2.py  test_evening_grades_wiring.py  test_evening_replay.py  test_exit_quality.py  test_export_alpaca_trades.py  test_feedback_loops.py  test_fill_reconciliation.py  test_invariants.py  test_macro_analyst.py  test_macro_data.py  test_macro_store.py  test_margin_policy.py  test_market_data.py  test_meta_reflector.py  test_missed_opportunities.py  test_models.py  test_news.py  test_notifier.py  test_ops_audit_round2.py  test_pipeline.py  (+26 more)
(+18 files in other folders)
