[project]
name = "quant-agent"
version = "0.1.0"
description = "LLM-agent quantitative trading system for US stocks"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "alpaca-py>=0.30.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
