[project]
name = "quant-agent"
version = "0.1.0"
description = "LLM-agent quantitative trading system for US stocks"
authors = [
    {name = "Yebo Feng", email = "fengyebo@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "alpaca-py>=0.30.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.30.0",
    # `requests` is already pulled in transitively by alpaca-py / yfinance /
    # anthropic, but src/notifier.py (Telegram push) uses it directly, so
    # declare it explicitly to avoid silent breakage if those upstreams
    # ever drop the dep.
    "requests>=2.31.0",
    # Python's zoneinfo falls back to the system tzdata. Linux cloud images
    # (incl. Ubuntu server) often ship without /usr/share/zoneinfo/US/Eastern,
    # which breaks every `ZoneInfo("US/Eastern")` in trading_calendar / APScheduler.
    # The PyPI tzdata package ships an embedded copy that zoneinfo picks up
    # automatically — harmless on systems that already have system tzdata.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
